--- a/css/main.css
+++ b/css/main.css
@@ -94,3 +94,10 @@ header nav a:hover{
 .filme-principal .container{
   width: 70%;
 }
+
+/* Carrosel */
+.box-filme{
+   height: 100%;
+   width: 100%; 
+   display: block;
+}
