--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ box-sizing: border-box;
 
 body{
     background: var(--preta);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', Times, serif;
     color: white;
 }
 
@@ -59,7 +59,7 @@ header nav a:hover{
 }
 
 .filme-principal .titulo{
-    margin-top: 30%;
+    margin-top: 10%;
     font-size: 40px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -100,4 +100,8 @@ header nav a:hover{
    height: 100%;
    width: 100%; 
    display: block;
+}
+
+.carrosel-filmes{
+    margin-top: 5px;
 }
